--- a/index.html
+++ b/index.html
@@ -238,28 +238,28 @@
             <input class="search-btn" type='button' id='btn' value='&#xf002' />
         </div>
         <div class="city-btn-container">
-            <a href="#" onclick="goToCitySearch('北京')" class="city-btn">&#xf041; 北京</a>
-            <a href="#" onclick="goToCitySearch('上海')" class="city-btn">&#xf041; 上海</a>
-            <a href="#" onclick="goToCitySearch('广州')" class="city-btn">&#xf041; 广州</a>
-            <a href="#" onclick="goToCitySearch('深圳')" class="city-btn">&#xf041; 深圳</a>
-            <a href="#" onclick="goToCitySearch('南京')" class="city-btn">&#xf041; 南京</a>
-            <a href="#" onclick="goToCitySearch('桂林')" class="city-btn">&#xf041; 桂林</a>
-            <a href="#" onclick="goToCitySearch('天津')" class="city-btn">&#xf041; 天津</a>
-            <a href="#" onclick="goToCitySearch('杭州')" class="city-btn">&#xf041; 杭州</a>
-            <a href="#" onclick="goToCitySearch('苏州')" class="city-btn">&#xf041; 苏州</a>
-            <a href="#" onclick="goToCitySearch('拉萨')" class="city-btn">&#xf041; 拉萨</a>
-            <a href="#" onclick="goToCitySearch('呼和浩特')" class="city-btn">&#xf041; 呼和浩特</a>
-            <a href="#" onclick="goToCitySearch('成都')" class="city-btn">&#xf041; 成都</a>
-            <a href="#" onclick="goToCitySearch('重庆')" class="city-btn">&#xf041; 重庆</a>
-            <a href="#" onclick="goToCitySearch('石家庄')" class="city-btn">&#xf041; 石家庄</a>
-            <a href="#" onclick="goToCitySearch('大理')" class="city-btn">&#xf041; 大理</a>
-            <a href="#" onclick="goToCitySearch('扬州')" class="city-btn">&#xf041; 扬州</a>
-            <a href="#" onclick="goToCitySearch('福州')" class="city-btn">&#xf041; 福州</a>
-            <a href="#" onclick="goToCitySearch('西安')" class="city-btn">&#xf041; 西安</a>
-            <a href="#" onclick="goToCitySearch('西宁')" class="city-btn">&#xf041; 西宁</a>
-            <a href="#" onclick="goToCitySearch('兰州')" class="city-btn">&#xf041; 兰州</a>
-            <a href="#" onclick="goToCitySearch('长沙')" class="city-btn">&#xf041; 长沙</a>
-            <a href="#" onclick="goToCitySearch('郑州')" class="city-btn">&#xf041; 郑州</a>
+            <a href="guilin.html" target="_blank" onclick="goToCitySearch('北京')" class="city-btn">&#xf041; 桂林</a>
+            <a href="haikou.html" target="_blank" onclick="goToCitySearch('上海')" class="city-btn">&#xf041; 海口</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('广州')" class="city-btn">&#xf041; 广州</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('深圳')" class="city-btn">&#xf041; 深圳</a>
+            <a href="heyuan.html" target="_blank" onclick="goToCitySearch('南京')" class="city-btn">&#xf041; 河源</a>
+            <a href="hezhou.html" target="_blank" onclick="goToCitySearch('桂林')" class="city-btn">&#xf041; 贺州</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('天津')" class="city-btn">&#xf041; 天津</a>
+            <a href="longyan.html" target="_blank" onclick="goToCitySearch('杭州')" class="city-btn">&#xf041; 龙岩</a>
+            <a href="meizhou.html" target="_blank" onclick="goToCitySearch('苏州')" class="city-btn">&#xf041; 梅州</a>
+            <a href="ningde.html" target="_blank" onclick="goToCitySearch('拉萨')" class="city-btn">&#xf041; 宁德</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('呼和浩特')" class="city-btn">&#xf041; 苏州</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('成都')" class="city-btn">&#xf041; 成都</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('重庆')" class="city-btn">&#xf041; 重庆</a>
+            <a href="pingxiang.html" target="_blank" onclick="goToCitySearch('石家庄')" class="city-btn">&#xf041; 萍乡</a>
+            <a href="qinzhou.html" target="_blank" onclick="goToCitySearch('大理')" class="city-btn">&#xf041; 钦州</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('扬州')" class="city-btn">&#xf041; 扬州</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('福州')" class="city-btn">&#xf041; 福州</a>
+            <a href="sanming.html" target="_blank" onclick="goToCitySearch('西安')" class="city-btn">&#xf041; 三明</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('西宁')" class="city-btn">&#xf041; 西宁</a>
+            <a href="wutong.html" target="_blank" onclick="goToCitySearch('兰州')" class="city-btn">&#xf041; 梧州</a>
+            <a href="#" target="_blank" onclick="goToCitySearch('长沙')" class="city-btn">&#xf041; 长沙</a>
+            
         </div>
     </center>
 </body>
